@@ -310,6 +310,8 @@ int pslr_set_aperture(pslr_handle_t h, pslr_rational_t value);
 int pslr_set_iso(pslr_handle_t h, uint32_t value, uint32_t auto_min_value, uint32_t auto_max_value);
 int pslr_set_ec(pslr_handle_t h, pslr_rational_t value);
 
+int pslr_set_white_balance(pslr_handle_t h, pslr_white_balance_mode_t wb_mode, uint32_t wb_adjust_mg, uint32_t wb_adjust_ba);
+
 int pslr_set_jpeg_quality(pslr_handle_t h, pslr_jpeg_quality_t quality);
 int pslr_set_jpeg_resolution(pslr_handle_t h, pslr_jpeg_resolution_t resolution);
 int pslr_set_jpeg_image_mode(pslr_handle_t h, pslr_jpeg_image_mode_t image_mode);
@@ -341,5 +343,9 @@ int pslr_get_model_buffer_size(pslr_handle_t h);
 pslr_buffer_type pslr_get_jpeg_buffer_type(pslr_handle_t h, int quality);
 
 void hexdump(uint8_t *buf, uint32_t bufLen);
+
+#ifdef DEBUG
+int pslr_test( pslr_handle_t h, bool cmd9_wrap, int subcommand, int argnum,  int arg1, int arg2, int arg3);
+#endif
 
 #endif
