@@ -10,6 +10,7 @@ version 0.70.02
 	Reading af mode (K-x only)
 	Autofocus mode bugfix
 	Reading white balance fields (K-x only)
+	Writing white balance fields
 
 version 0.70.01 ( 2011-01-19 )
 	File format support for commandline interface (--file_format)
